@@ -2,6 +2,7 @@
   * Quote passwords when passed to a delegate program.
   * Can read geo-related EXIF metdata once-again (reference
     https://github.com/ImageMagick/ImageMagick/issues/198).
+  * Sanitize all delegate emedded formatting characters.
 
 2016-05-09  6.9.4-1 Cristy  <quetzlzacatenango@image...>
   * Release ImageMagick version 6.9.4-1, GIT revision 10755:d540dda:20160509.
